--- a/DGPEnvironment.yml
+++ b/DGPEnvironment.yml
@@ -1,92 +1,92 @@
+# Variable 'mytag' was defined in the Variables tab
 variables:
 - name: BuildParameters.solution
   value: '**\*.sln'
 - name: BuildParameters.ArtifactName
   value: drop
-  
-trigger: 
-- main
-
-pool: 
-   name: SWF_Burgos_Spain_env
-
+trigger:
+  branches:
+    include:
+    - main
+name: $(mytag)$(rev:.r)
+resources:
+  repositories:
+  - repository: self
+    type: git
+    ref: refs/heads/main
 jobs:
-- deployment: VMDeploy
-  displayName: Deploy to VM
-  environment: 
-   name: dev
-   resourceType: VirtualMachine
-  strategy:
-     runOnce:
-        deploy:   
-          steps:
-          - script: echo "Hello world"
-          - script: hostname
-          - checkout: self
-            clean: true
-          - task: PowerShell@2
-            displayName: Git Tags
-            inputs:
-              targetType: inline
-              script: >-
-                Write-Host "Hello World"
+- job: Job_1
+  displayName: Agent job 1
+  pool:
+    name: SWF_Burgos_Spain_env
+    demands:
+    - env -equals qa2
+  steps:
+  - checkout: self
+    clean: true
+  - task: PowerShell@2
+    displayName: Git Tags
+    inputs:
+      targetType: inline
+      script: >-
+        Write-Host "Hello World"
 
-                $last_tag = & 'git' 'describe' '--tags' '--abbrev=0'
+        $last_tag = & 'git' 'describe' '--tags' '--abbrev=0'
 
-                Write-Host "Version is $($last_tag)"
+        Write-Host "Version is $($last_tag)"
 
 
-                ##################################################
+        ##################################################
 
 
-                Set-Variable -Name "mytag" -Value "$last_tag"
+        Set-Variable -Name "mytag" -Value "$last_tag"
 
-                Get-Variable -Name "mytag"
-          - task: DownloadGitHubRelease@0
-            displayName: Download GitHub Release
-            enabled: False
-            inputs:
-              connection: 1f02de48-1924-4f3e-8646-b70a1e38ae87
-              userRepository: DavidGonzalezTR/WebApplicationDGP
-              defaultVersionType: specificTag
-              version: v5.3.0
-          - task: NuGetToolInstaller@0
-            displayName: Use NuGet 4.4.1
-            inputs:
-              versionSpec: 4.4.1
-          - task: NuGetCommand@2
-            displayName: NuGet restore
-            inputs:
-              solution: $(BuildParameters.solution)
-          - task: VSBuild@1
-            displayName: Build solution
-            inputs:
-              solution: $(BuildParameters.solution)
-              msbuildArgs: /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactstagingdirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"
-              platform: $(BuildPlatform)
-              configuration: $(BuildConfiguration)
-          - task: VSTest@2
-            displayName: Test Unitarios
-            inputs:
-              testAssemblyVer2: >-
-                **\$(BuildConfiguration)\*test*.dll
+        Get-Variable -Name "mytag"
+  - task: DownloadGitHubRelease@0
+    displayName: Download GitHub Release
+    enabled: False
+    inputs:
+      connection: 1f02de48-1924-4f3e-8646-b70a1e38ae87
+      userRepository: DavidGonzalezTR/WebApplicationDGP
+      defaultVersionType: specificTag
+      version: v5.3.0
+  - task: NuGetToolInstaller@0
+    displayName: Use NuGet 4.4.1
+    inputs:
+      versionSpec: 4.4.1
+  - task: NuGetCommand@2
+    displayName: NuGet restore
+    inputs:
+      solution: $(BuildParameters.solution)
+  - task: VSBuild@1
+    displayName: Build solution
+    inputs:
+      solution: $(BuildParameters.solution)
+      msbuildArgs: /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactstagingdirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"
+      platform: $(BuildPlatform)
+      configuration: $(BuildConfiguration)
+  - task: VSTest@2
+    displayName: Test Unitarios
+    inputs:
+      testAssemblyVer2: >-
+        **\$(BuildConfiguration)\*test*.dll
 
-                !**\obj\**
-              platform: $(BuildPlatform)
-              configuration: $(BuildConfiguration)
-          - task: PublishSymbols@2
-            displayName: Publish symbols path
-            continueOnError: True
+        !**\obj\**
+      platform: $(BuildPlatform)
+      configuration: $(BuildConfiguration)
+  - task: PublishSymbols@2
+    displayName: Publish symbols path
+    continueOnError: True
 
-
-            inputs:
-              SearchPattern: '**\bin\**\*.pdb'
-              PublishSymbols: false
-              SymbolServerType: TeamServices
-          - task: PublishBuildArtifacts@1
-            displayName: Publish Artifact
-            condition: succeededOrFailed()
-            inputs:
-              PathtoPublish: $(build.artifactstagingdirectory)
-              ArtifactName: $(BuildParameters.ArtifactName)
-              TargetPath: '\\my\share\$(Build.DefinitionName)\$(Build.BuildNumber)'
+    
+    inputs:
+      SearchPattern: '**\bin\**\*.pdb'
+      PublishSymbols: false
+      SymbolServerType: TeamServices
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Artifact
+    condition: succeededOrFailed()
+    inputs:
+      PathtoPublish: $(build.artifactstagingdirectory)
+      ArtifactName: $(BuildParameters.ArtifactName)
+      TargetPath: '\\my\share\$(Build.DefinitionName)\$(Build.BuildNumber)'
