--- a/DGPEnvironment.yml
+++ b/DGPEnvironment.yml
@@ -17,10 +17,14 @@ resources:
 jobs:
 - job: Job_1
   displayName: Agent job 1
+  environment: 
+   name: dev
+   resourceType: VirtualMachine  
   pool:
     name: SWF_Burgos_Spain_env
     demands:
     - env -equals qa2
+     
   steps:
   - checkout: self
     clean: true
