--- a/templates/my-steps-template.yml
+++ b/templates/my-steps-template.yml
@@ -5,3 +5,5 @@ steps:
   displayName: Dir from Template
 - script: echo Last step in the template
   displayName: Last from Template
+- script: echo One More step in the template
+  displayName: One More Step from Template  
