--- a/Templates 3 - Stages.yml
+++ b/Templates 3 - Stages.yml
@@ -1,7 +1,9 @@
 trigger: none
 
 pool:
- vmImage: *ubuntu-latest'
+  name: SWF_Burgos_Spain_env
+  demands:
+  - env -equals qa
 
 stages:
 - stage: StagePipeline
