Update Templates 3 - Stages.yml

--- a/.github/workflows/Templates 3 - Stages.yml
+++ b/.github/workflows/Templates 3 - Stages.yml
@@ -1,9 +1,8 @@
 trigger: none
 
 pool:
-  name: SWF_Burgos_Spain_env
-  demands:
-  - env -equals qa
+  name: ubuntu-latest
+
 
 stages:
 - stage: StagePipeline
