Update Templates 3 - Stages.yml

--- a/.github/workflows/Templates 3 - Stages.yml
+++ b/.github/workflows/Templates 3 - Stages.yml
@@ -1,4 +1,10 @@
-trigger: none
+name: WorkFlow CI / CD
+concurrency: package
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 pool:
   name: ubuntu-latest
